minor refactoring: use new method to convert the stream into an unmodifiable list copy